--- a/src/components/forms/button/button.html
+++ b/src/components/forms/button/button.html
@@ -1,1 +1,7 @@
-<button data-fls-button></button>
+<a href="#" data-fls-button class="button">Button</a>
+<a href="#" data-fls-button class="button button--lite">Button</a>
+<a href="#" data-fls-button class="button button--icon --icon-arrow-ru">Button</a>
+
+<a href="#" data-fls-button class="button button--text --icon-arrow-ru">Button Text</a>
+<a href="#" data-fls-button class="button button--text button--text-big --icon-arrow-d">Button Text</a>
+<a href="#" data-fls-button class="button button--text button--text-big button--text-rev --icon-arrow">To Top</a>
