--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -8,8 +8,12 @@ $fontSize: 16; // Розмір шрифту за замовченням (де 16
 
 // Основні кольори
 $bgColor: #0e0e0e;
+$darkColor: #0e0e0e;
 $mainColor: rgba(218, 197, 167, 0.6); // Колір шрифту за замовчуванням
 $liteColor: #dac5a7;
+$liteColorHover: #f9efe1;
+$greyColor: rgba(218, 197, 167, 0.15);
+$mutedColor: rgba(218, 197, 167, 0.05);
 
 // ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 // Налаштування адаптивної сітки
