--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -104,3 +104,45 @@ body {
 // ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 // Загальні стилі для усього сайту
 // ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+[class*="-arrow-d"] {
+	&::before{
+		
+		transform: rotate(180deg);
+	}
+}
+[class*="-arrow-l"] {
+	&::before{
+		
+		transform: rotate(-90deg);
+	}
+}
+[class*="-arrow-r"] {
+	&::before{
+		
+		transform: rotate(90deg);
+	}
+}
+[class*="-arrow-ru"] {
+	&::before{
+		
+		transform: rotate(45deg);
+	}
+}
+[class*="-arrow-lu"] {
+	&::before{
+		
+		transform: rotate(-45deg);
+	}
+}
+[class*="-arrow-rd"] {
+	&::before{
+		
+		transform: rotate(135deg);
+	}
+}
+[class*="-arrow-ld"] {
+	&::before{
+		
+		transform: rotate(-135deg);
+	}
+}
