--- a/src/components/forms/button/button.scss
+++ b/src/components/forms/button/button.scss
@@ -1,13 +1,97 @@
 //<BUTTONS (a.btn+tab)>
 // Сніппет (HTML): btn
 .button {
+	font-family: $secondFamily;
 	display: inline-flex;
-	padding: 0px 0px;
+	justify-content: center;
+	align-items: center;
+	border: 1px solid $greyColor;
+	border-radius: 2px;
+	padding: 9px 15px;
+	backdrop-filter: blur(15px);
+	background-color: $mutedColor;
+	// text
+	font-size: 13px;
+	line-height: 1.6;
+	letter-spacing: 0.12em;
+	text-transform: uppercase;
+	color: $liteColor;
+	// transition
+	transition: all 0.5s;
 	@media (any-hover: hover) {
 		&:hover {
+			background: $liteColor;
+			color: $darkColor;
 		}
+	}
+	&--lite {
+		background-color: $liteColor;
+		color: $darkColor;
+		@media (any-hover: hover) {
+			&:hover {
+				background-color: $mutedColor;
+				color: $liteColor;
+			}
+		}
+	}
+	&--icon {
+		flex-direction: row-reverse;
+		gap: 12px;
+	}
+	&--text {
+		padding: 0;
+		background-color: transparent;
+		border: none;
+		gap: 12px;
+		&::before {
+			width: 32px;
+			height: 32px;
+			text-align: center;
+			align-content: center;
+			border: 1px solid $greyColor;
+			backdrop-filter: blur(15px);
+			background-color: $mutedColor;
+			border-radius: 50%;
+			transition: all 0.5s;
+		}
+		@media (any-hover: hover) {
+			&:hover {
+				background-color: transparent;
+				color: $liteColor;
+				&::before {
+					background: $liteColor;
+					color: $darkColor;
+				}
+			}
+		}
+	}
+	&--text-big {
+		&::before{
+			width: 46px;
+			height: 46px;
+			font-size: 15px;
+		}
+	}
+	&--text-rev {
+		flex-direction: row-reverse;
 	}
 	&--fw {
 		width: 100%;
 	}
 }
+/*
+.text-button {
+	align-items: center;
+	gap: 12px;
+	font-family: $secondFamily;
+	text-transform: uppercase;
+	// text
+
+	&::before{
+		width: 32px;
+		height: 32px;
+		text-align: center;
+		align-content: center;
+	}
+}
+*/
