--- a/src/components/layout/header/header.scss
+++ b/src/components/layout/header/header.scss
@@ -1,5 +1,58 @@
 .header {
+	position: fixed;
+	top: 15px;
+	left: 0;
+	right: 0;
+	z-index: 50;
+	@media (min-width:toEm($mobile)) {
+		top: 48px;
+	}
 	// .header__container
-	&__container {
+	&__container {}
+	&__button,
+	&__logo,
+	&__link-logo {
+		z-index: 5;
+		position: relative;
+	}
+	// .header__logo
+	&__logo {
+	}
+	// .header__link-logo
+	&__link-logo {
+	}
+	// .header__body
+	&__body {
+		position: relative;
+		display: flex;
+		align-items: center;
+		gap: 16px;
+		padding: 12px;
+		&::before {
+			z-index: 3;
+			position: relative;
+			content: '';
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			top: 0;
+			left: 0;
+			border: 1px solid $greyColor;
+			border-radius: 2px;
+			background: $mutedColor;
+			backdrop-filter: blur(15px);
+			-webkit-backdrop-filter: blur(15px);
+		}
+		@media (min-width:toEm($mobile)) {
+			padding-left: 24px;
+			gap: 32px;
+		}
+	}
+	// .header__button
+	&__button {
+	}
+	@media (min-width:toEm($mobile)) {
+		display: flex;
+		justify-content: center;
 	}
 }
