--- a/src/components/layout/menu/menu.html
+++ b/src/components/layout/menu/menu.html
@@ -1,12 +1,12 @@
 <div class="header__menu menu">
-	<button type="button" data-fls-menu class="menu__icon icon-menu"><span></span></button>
 	<nav class="menu__body">
 		<ul class="menu__list">
 			<each loop='item in [
-					{"href": "#","ancor": "Home"},
+					{"href": "#","ancor": "Services"},
+					{"href": "#","ancor": "Work"},
 					{"href": "#","ancor": "About"},
 					{"href": "#","ancor": "Blog"},
-					{"href": "#","ancor": "Contacts"}
+					{"href": "#","ancor": "Pages"}
 				]'>
 				<if condition="'[[active]]' === '[[item.ancor]]'">
 					<li class="menu__item">
