--- a/src/components/layout/menu/menu.scss
+++ b/src/components/layout/menu/menu.scss
@@ -1,51 +1,89 @@
 .menu {
-	// .menu__icon
-	&__icon {
+	@media (max-width:toEm($mobile)) {
+		flex-grow: 1;
 	}
+	// .menu__icon
+	&__icon {}
 	// .menu__body
 	&__body {
 		@media (max-width: toEm($mobile)) {
 			position: fixed;
 			width: 100%;
 			height: 100svh;
-			left: -100%;
+			right: -100%;
 			top: 0;
 			overflow: auto;
-			padding: 50px 15px 30px 15px;
-			transition: left 0.3s;
+			padding: 110px 15px 30px 15px;
+			background-color: rgba(14, 14, 14, .8);
+			backdrop-filter: blur(4px);
+			-webkit-backdrop-filter: blur(4px);
+			transition: right 0.5s;
 			&::before {
 				content: "";
 				position: fixed;
 				width: 100%;
 				height: 70px;
-				left: -100%;
+				right: -100%;
 				top: 0;
-				transition: left 0.3s;
+				transition: right 0.5s;
 				z-index: 2;
 			}
 			[data-fls-menu-open] & {
-				left: 0;
+				right: 0;
 				&::before {
-					left: 0;
+					right: 0;
 				}
 			}
 		}
 	}
 	// .menu__list
 	&__list {
+		display: flex;
+		gap: 15px 20px;
+		flex-wrap: wrap;
 		@media (max-width: toEm($mobile)) {
+			flex-direction: column;
+			align-items: flex-end;
 		}
 	}
 	// .menu__item
-	&__item {
-	}
+	&__item {}
 	// .menu__link
 	&__link {
+		z-index: 5;
+		position: relative;
+		font-family: $secondFamily;
+		font-size: 13px;
+		line-height: 1.6;
+		letter-spacing: 0.12em;
+		text-transform: uppercase;
+		color: $liteColor;
+		transition: color 0.5s;
+		&::after {
+			content: '';
+			width: 0;
+			height: 0.5px;
+			background-color: $liteColor;
+			position: absolute;
+			bottom: 0;
+			left: 50%;
+			transition: width 0.5s, left 0.5s;
+		}
+		@media (any-hover: hover) {
+			&:hover {
+				color: $liteColorHover;
+				&::after {
+					width: 100%;
+					left: 0;
+					background-color: $liteColorHover;
+				}
+			}
+		}
 		@media (max-width: toEm($mobile)) {
+			font-size: 24px;
 		}
 	}
 }
-
 //Burger Icon
 .icon-menu {
 	display: none;
@@ -62,12 +100,13 @@
 		&::before,
 		&::after {
 			content: "";
-			transition: all 0.3s ease 0s;
+			transition: all 0.5s ease 0s;
 			right: 0;
 			position: absolute;
 			width: 100%;
 			height: 2px;
-			background-color: #000;
+			border-radius: 2px;
+			background-color: $liteColor;
 		}
 		&::before {
 			top: 0;
@@ -83,8 +122,7 @@
 				width: 0;
 			}
 			&::before,
-			&::after {
-			}
+			&::after {}
 			&::before {
 				top: calc(50% - 1px);
 				transform: rotate(-45deg);
