--- a/src/components/pages/home/home.html
+++ b/src/components/pages/home/home.html
@@ -3,6 +3,9 @@
 
 <main class="page page--home">
 	<div class="page__container">
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus eveniet doloribus officia minima incidunt. Maiores sequi sed dolore voluptatum, maxime labore rerum eaque libero accusantium sapiente dolorem, expedita ab? Ut?
+		Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, placeat? Saepe repellat sit ea quae aperiam corrupti ratione unde molestias, illo odio nemo esse at tenetur distinctio animi nisi eaque.
+		Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, placeat? Saepe repellat sit ea quae aperiam corrupti ratione unde molestias, illo odio nemo esse at tenetur distinctio animi nisi eaque.
+		Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, placeat? Saepe repellat sit ea quae aperiam corrupti ratione unde molestias, illo odio nemo esse at tenetur distinctio animi nisi eaque.
+		Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, placeat? Saepe repellat sit ea quae aperiam corrupti ratione unde molestias, illo odio nemo esse at tenetur distinctio animi nisi eaque.
 	</div>
 </main>
