--- a/src/components/layout/menu/menu.scss
+++ b/src/components/layout/menu/menu.scss
@@ -52,7 +52,7 @@
 	&__link {
 		z-index: 5;
 		position: relative;
-		font-family: $secondFamily;
+		font-family: $fontSatoshi;
 		font-size: 13px;
 		line-height: 1.6;
 		letter-spacing: 0.12em;
