--- a/src/components/forms/button/button.scss
+++ b/src/components/forms/button/button.scss
@@ -1,7 +1,7 @@
 //<BUTTONS (a.btn+tab)>
 // Сніппет (HTML): btn
 .button {
-	font-family: $secondFamily;
+	font-family: $fontSatoshi;
 	display: inline-flex;
 	justify-content: center;
 	align-items: center;
@@ -83,7 +83,7 @@
 .text-button {
 	align-items: center;
 	gap: 12px;
-	font-family: $secondFamily;
+	font-family: $fontSatoshi;
 	text-transform: uppercase;
 	// text
 
