--- a/src/components/layout/head/fonts-preload.html
+++ b/src/components/layout/head/fonts-preload.html
@@ -1,4 +1,5 @@
 <link rel="preload" href="@fonts/Satoshi-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 <link rel="preload" href="@fonts/Satoshi-Light.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+<link rel="preload" href="@fonts/Gambetta-LightItalic.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 <link rel="preload" href="@fonts/Chillax-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 <link rel="preload" href="@fonts/Chillax-Light.woff2" as="font" type="font/woff2" crossorigin="anonymous">
