--- a/src/components/pages/home/home.html
+++ b/src/components/pages/home/home.html
@@ -2,10 +2,15 @@
 <link rel="stylesheet" href="@components/pages/home/home.scss">
 
 <main class="page page--home">
-	<div class="page__container">
-		Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, placeat? Saepe repellat sit ea quae aperiam corrupti ratione unde molestias, illo odio nemo esse at tenetur distinctio animi nisi eaque.
-		Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, placeat? Saepe repellat sit ea quae aperiam corrupti ratione unde molestias, illo odio nemo esse at tenetur distinctio animi nisi eaque.
-		Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, placeat? Saepe repellat sit ea quae aperiam corrupti ratione unde molestias, illo odio nemo esse at tenetur distinctio animi nisi eaque.
-		Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, placeat? Saepe repellat sit ea quae aperiam corrupti ratione unde molestias, illo odio nemo esse at tenetur distinctio animi nisi eaque.
-	</div>
+	<section class="page__hero hero">
+		<div class="hero__container">
+			<img class="hero__image" src="@img/arik.png" alt="Image">
+			<div data-fls-blockhead class="hero__blockhead blockhead">
+				<h1 class="blockhead__title blockhead__title--size-160">Web Designer <span>& Developer</span></h1>
+				<div class="blockhead__text blockhead__text--size-24">
+					<p>Premium web design, development, and SEO services to help your business stand out.</p>
+				</div>
+			</div>
+		</div>
+	</section>
 </main>
