--- a/src/styles/fonts/fonts.css
+++ b/src/styles/fonts/fonts.css
@@ -1,4 +1,5 @@
 @font-face {font-family: Satoshi;font-display: swap;src: url("@fonts/Satoshi-Regular.woff2") format("woff2");font-weight: 400;font-style: normal;}
 @font-face {font-family: Satoshi;font-display: swap;src: url("@fonts/Satoshi-Light.woff2") format("woff2");font-weight: 300;font-style: normal;}
+@font-face {font-family: Gambetta;font-display: swap;src: url("@fonts/Gambetta-LightItalic.woff2") format("woff2");font-weight: 400;font-style: normal;}
 @font-face {font-family: Chillax;font-display: swap;src: url("@fonts/Chillax-Regular.woff2") format("woff2");font-weight: 400;font-style: normal;}
 @font-face {font-family: Chillax;font-display: swap;src: url("@fonts/Chillax-Light.woff2") format("woff2");font-weight: 300;font-style: normal;}
