--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -3,7 +3,8 @@
 // ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
 $fontFamily: "Chillax", sans-serif; // Шрифт за замовчуванням
-$secondFamily: "Satoshi", sans-serif; // Шрифт за замовчуванням
+$fontSatoshi: "Satoshi", sans-serif;
+$fontGambetta: "Gambetta", sans-serif;
 $fontSize: 16; // Розмір шрифту за замовченням (де 16 - розмір шрифту за замовчуванням з макету)
 
 // Основні кольори
