--- a/src/components/pages/home/home.html
+++ b/src/components/pages/home/home.html
@@ -13,4 +13,87 @@
 			</div>
 		</div>
 	</section>
+	<div class="page__clients clients">
+		<ul class="clients__container">
+			<li class="clients__item">
+				<img src="@img/cliens/01.svg" alt="Image">
+			</li>
+			<li class="clients__item">
+				<img src="@img/cliens/02.svg" alt="Image">
+			</li>
+			<li class="clients__item">
+				<img src="@img/cliens/03.svg" alt="Image">
+			</li>
+			<li class="clients__item">
+				<img src="@img/cliens/04.svg" alt="Image">
+			</li>
+			<li class="clients__item">
+				<img src="@img/cliens/05.svg" alt="Image">
+			</li>
+			<li class="clients__item">
+				<img src="@img/cliens/06.svg" alt="Image">
+			</li>
+		</ul>
+	</div>
+	<div class="page__skills skills">
+		<div class="skills__container">
+			<include src="@components/custom/skill/skill.html" locals='{
+				"title":"Web design",
+				"text":"Visually stunning web designs that captivate your audience by blending your brand voice and customer needs.",
+				"button":"About Webdesign"
+			}'></include>
+			<include src="@components/custom/skill/skill.html" locals='{
+				"title":"Development",
+				"text":"Get custom web development solutions that are tailored to your specifications, designed to deliver a flawless user experience.",
+				"button":"About Webflow"
+			}'></include>
+			<include src="@components/custom/skill/skill.html" locals='{
+				"title":"Content & Seo",
+				"text":"Proven SEO strategies that enhance your online performance, bringing you to the forefront of organic search results.",
+				"button":"About SEO"
+			}'></include>
+		</div>
+	</div>
+	<section class="page__selected-work selected-work">
+		<div class="selected-work__container">
+			<div class="selected-work__header">
+				<h2 class="selected-work__title">Selected <span>Work</span></h2>
+				<a href="#" data-fls-button class="button button--text --icon-arrow-ru">See all</a>
+			</div>
+			<div class="selected-work__items works">
+				<include src="@components/custom/work/work.html" locals='{
+					"link":"#",
+					"category-link":"#",
+					"image":"@img/works/01.jpg",
+					"name":"Space",
+					"category":"Webdesign"
+				}'>
+				</include>
+				<include src="@components/custom/work/work.html" locals='{
+					"link":"#",
+					"category-link":"#",
+					"image":"@img/works/02.jpg",
+					"name":"Nova",
+					"category":"Webdesign"
+				}'>
+				</include>
+				<include src="@components/custom/work/work.html" locals='{
+					"link":"#",
+					"category-link":"#",
+					"image":"@img/works/03.jpg",
+					"name":"Sonic",
+					"category":"Webdesign"
+				}'>
+				</include>
+				<include src="@components/custom/work/work.html" locals='{
+					"link":"#",
+					"category-link":"#",
+					"image":"@img/works/04.jpg",
+					"name":"Solar",
+					"category":"Webdesign"
+				}'>
+				</include>
+			</div>
+		</div>
+	</section>
 </main>
