--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -15,6 +15,7 @@ $liteColor: #dac5a7;
 $liteColorHover: #f9efe1;
 $greyColor: rgba(218, 197, 167, 0.15);
 $mutedColor: rgba(218, 197, 167, 0.05);
+$mutedColorFull: #181715;
 
 // ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 // Налаштування адаптивної сітки
