--- a/src/components/pages/home/home.scss
+++ b/src/components/pages/home/home.scss
@@ -93,7 +93,7 @@
 	// .items-process__header
 	&__header {
 		position: relative;
-		@include adaptiveValue("height", 158, 80);
+		@include adaptiveValue("height", 158, 80, 0, $containerWidth, 992);
 		display: grid;
 		grid-template-rows: 46px 1fr;
 		gap: 16px;
@@ -125,29 +125,19 @@
 	}
 }
 .item-process {
-	flex: 0 1 auto;
-	width: 50%;
 	position: relative;
-	padding-right: 99.5px;
-	&::before {
-		content: '';
-		position: absolute;
-		background-color: $greyColor;
-		width: 1px;
-		height: 100%;
-		right: -1px;
-	}
+	@include adaptiveValue("padding-left", 99.5, 50, 2, $containerWidth, 992);
 	&::after {
 		z-index: 2;
 		position: absolute;
-		top: 50%;
-		right: 0;
-		translate: 50% -50%;
+		top: 10px;
+		left: 10px;
+		translate: -50% -50%;
 		counter-increment: item;
 		content: counter(item, decimal-leading-zero);
 		width: 40px;
 		height: 40px;
-		outline: 16px solid $bgColor;
+		outline: 5px solid $bgColor;
 		font-size: 13px;
 		text-align: center;
 		align-content: center;
@@ -155,28 +145,63 @@
 		border: 1px solid $greyColor;
 		border-radius: 50%;
 	}
-	// .item-process__body
-	&__body {
-		background-color: $mutedColorFull;
-		border: 1px solid $greyColor;
-		border-radius: 2px;
-		@include adaptiveValue("padding", 48, 20);
+	&::before {
+		content: '';
+		position: absolute;
+		background-color: $greyColor;
+		width: 1px;
+		height: 100%;
+		left: -1px;
 	}
-	&:nth-child(odd) {
+	// .item-process__body
+	&__body {}
+	&:nth-child(even) {}
+	@media (min-width:toEm($tablet)) {
+		flex: 0 1 auto;
+		width: 50%;
 		align-self: flex-end;
-		padding-left: 99.5px;
-		padding-right: 0;
-		&::before {
-			right: auto;
-			left: 0;
-		}
 		&::after {
 			left: 0;
-			right: auto;
-			translate: -50% -50%;
+			top: 50%;
+			outline: 16px solid $bgColor;
+		}
+		&:nth-child(even) {
+			align-self: flex-start;
+			padding-left: 0;
+			@include adaptiveValue("padding-right", 99.5, 50, 0, $containerWidth, 992);
+			&::before {
+				left: auto;
+				right: 0;
+			}
+			&::after {
+				right: 0;
+				left: auto;
+				translate: 50% -50%;
+			}
+		}
+		&:last-child {
+			&::before {
+				height: 50%;
+			}
+		}
+		&:not(:first-child) {
+			margin-top: -50px;
 		}
 	}
-	&:not(:first-child) {
-		translate: 0 -50px;
+	@media (max-width:toEm($tablet)) {
+		&:not(:last-child) {
+			margin-bottom: 20px;
+		}
+		&::before {
+			display: block;
+			height: 20px;
+			top: -20px;
+			left: 50%;
+		}
+		&:first-child {
+			&::before {
+				display: none;
+			}
+		}
 	}
 }
